# Commodity-Lab

./: .gitignore  BUILD_AND_RELEASE.md  COMPLETION_REPORT.md  FINAL_SUMMARY.md  PACKAGING_GUIDE.md  QUICK_RELEASE.md  README.md  UI_REDESIGN_GUIDE.md  build.ps1  build.sh  commodity_lab.spec  py_files_list.txt  pyproject.toml  requirements.txt  run.sh  tmp_pycache_dirs.txt
.github/workflows/: build-and-release.yml  ci.yml
app/: desktop_launcher.py  i18n.py  main.py
app/.archive/: 0_Catalog.py  1_Data.py  2_Transforms.py
app/assets/: README.md
app/locales/: en.json  zh.json
app/modules/: i18n.py
app/pages/: 0_Catalog.py  0_GettingStarted.py  1_Data.py  2_QC.py  (+16 more)
commodity_lab.egg-info/: PKG-INFO  SOURCES.txt
core/: auto_strategy.py  backtest.py  backtest_report.py  condition_builder.py  correlation.py  db.py  derived_engine.py  features.py  features_eng.py  io.py  monitor.py  notifier.py  qc.py  refresh.py  scheduler.py  schema.py  strategies.py  strategy_examples.py  technical_indicators.py  transforms.py  tushare_provider.py  watch.py  yf_prices.py  yf_provider.py  yf_search.py
data/: commodity_lab.duckdb.wal
reports/: demo_backtest_equity.csv  demo_backtest_metrics.json  demo_backtest_trades.csv
scripts/: run_backtest_demo.py
tests/: test_auto_strategy.py  test_backtest.py  test_condition_evaluator.py  test_db_delete_instruments.py  test_db_query_prices.py  test_derived_engine.py  test_i18n_locales.py  test_i18n_runtime.py  test_pages_smoke.py  test_series_and_recipes.py  test_strategy_examples.py  test_transforms.py  test_tushare_provider.py
