[project]
name = "commodity-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "yfinance>=0.2.32",
    "plotly>=5.17.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core"]
